# popper

./: README.md  popper_technical_report.docx  pyproject.toml  setup_seed_library.sh
backend/: main.py  requirements.txt
backend/data/runs/: 01eb59b9-7030-402c-963c-ddb021ef7e7e.json  37866f50-ae59-46b1-ad24-ddf04a9af898.json  aa064dd6-c36e-405a-b5aa-b01859b81e70.json
nextjs-ui/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
nextjs-ui/app/: globals.css  layout.tsx  page.tsx
nextjs-ui/app/api/run_campaign/: route.ts
nextjs-ui/app/reports/: page.tsx
nextjs-ui/app/reports/[runId]/: page.tsx
nextjs-ui/components/: app-shell.tsx  app-sidebar.tsx  model-badge.tsx
nextjs-ui/lib/: campaign-context.tsx  campaign.ts
popper_rl/: __init__.py  __main__.py  adversarial_library_meta (1).jsonl  agent.py  campaign.py  executor.py  groq_generator.py  live_executor.py  prompt_library.py  prompt_loader.py  validation_method_text.py  vulnerability_library_featherless_adversarial.jsonl
popper_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
popper_rl/generators/: __init__.py
scripts/: kaggle_prompt_collector.py
